@@ -335,6 +335,8 @@ OPTIONS
 • 'busy' sets a buffer "busy" status. Indicated in the default statusline.
 • 'pumborder' adds a border to the popup menu.
 • |g:clipboard| autodetection only selects tmux when running inside tmux
+• 'statusline' allows "stacking" highlight groups (groups inherit from
+  previous highlight attributes)
 
 PERFORMANCE
 
